Optimise loop in border_intersections, break out of loop ASAP and optimise tests.
Remove warnings connected with deprecated alloction.


Signed-off-by: John Bradley <flypie@rocketmail.com>