@@ -1308,7 +1308,7 @@ public class BasicBoard implements java.io.Serializable
             {
                 for (int i = 0; i < curr_item.net_count(); ++i)
                 {
-                    p_changed_nets.add(new Integer(curr_item.get_net_no(i)));
+                    p_changed_nets.add(Integer.valueOf(curr_item.get_net_no(i))); //Ontobus
                 }
             }
         }
@@ -1325,7 +1325,7 @@ public class BasicBoard implements java.io.Serializable
             {
                 for (int i = 0; i < curr_item.net_count(); ++i)
                 {
-                    p_changed_nets.add(new Integer(curr_item.get_net_no(i)));
+                    p_changed_nets.add(Integer.valueOf(curr_item.get_net_no(i))); //Ontobus
                 }
             }
         }
