@@ -446,7 +446,7 @@ public class BoardHandling
         if (clearance_violations == null)
         {
             clearance_violations = new ClearanceViolations(this.board.get_items());
-            Integer violation_count = new Integer((clearance_violations.list.size() + 1) / 2);
+            Integer violation_count = Integer.valueOf((clearance_violations.list.size() + 1) / 2); //Ontobus
             String curr_message = violation_count.toString() + " " + resources.getString("clearance_violations_found");
             screen_messages.set_status_message(curr_message);
         }
