@@ -105,8 +105,8 @@ public class Padstacks implements java.io.Serializable
      * The padatack name is generated internally.
      */
     public Padstack add(ConvexShape [] p_shapes)
-    {
-        String new_name = "padstack#" + (new Integer(padstack_arr.size() + 1).toString());
+    {        
+        String new_name = "padstack#" + Integer.valueOf(padstack_arr.size() + 1).toString(); //ontobus
         return add(new_name, p_shapes, false, false);
     }
     
