@@ -99,7 +99,7 @@ public class Nets implements java.io.Serializable
     public Net new_net(java.util.Locale p_locale)
     {
         java.util.ResourceBundle resources = java.util.ResourceBundle.getBundle("rules.resources.Default", p_locale);
-        String net_name = resources.getString("net#") + (new Integer(net_arr.size() + 1)).toString();
+        String net_name = resources.getString("net#") + (Integer.valueOf(net_arr.size() + 1)).toString(); //ontobus
         return add(net_name, 1, false);
     }
 
